sfdx-source/unpackaged/main/default/objects/Quote/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
<type>Date</type>
</CustomField>