sfdx-source/unpackaged/main/default/objects/Quote/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>DateTime</label>
<type>DateTime</type>
</CustomField>