sfdx-source/unpackaged/main/default/objects/Quote/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
<type>Phone</type>
</CustomField>