sfdx-source/unpackaged/main/default/objects/Quote/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
<type>Time</type>
</CustomField>